Upgrade to Quarkus 1.13.4.Final && fix scraping non-TLS endpoints